--- a/i7doc.css
+++ b/i7doc.css
@@ -18,13 +18,13 @@ line-height: 1.5;
   width: 42rem;
 margin: auto;
 font-family: sans-serif;
-background-color: #F0F0FA; 
+background-color: #F8F8FA; 
 }
 p { margin-left: 1rem; margin-right: 1rem; }
 
-div.codeblock { background-color: #E6E6E6; color: #000;  font-family: "Go", sans-serif; margin-left: 0; margin-top: 1.5rem; margin-bottom: 1rem;  width: 100%;
+div.codeblock { background-color: #E6E6E6; color: #000;  font-family: "Go", sans-serif; margin-left: 0; margin-top: 1.5rem; margin-bottom: 1rem;  width: 100%; border: .05rem solid #c5c5cf; 
 padding-top: .33rem; padding-bottom: .5rem;
-border-radius: .25rem;
+border-radius: .33rem;
 }
 .alpha-index-entry { margin-top: .25rem; }
 /* offset for td's padding */
@@ -36,7 +36,9 @@ div.defn {
 border-radius: 1rem;
 padding: 1rem 1rem 0rem 1rem;
 }
+.defnline { background-color: #E6E6E6; color: #000; border: .05rem solid #c5c5cf; border-radius: .33rem;  padding: .25rem; }
 
+.defn-or { font-style: italic; text-align: center; padding: .25rem; }
 div.defn + div.defn { margin-top: 1rem; }
 
 /*span.defnbracketed { font-style: italic; }*/
