--- a/i7doc.css
+++ b/i7doc.css
@@ -36,6 +36,9 @@ div.defn {
 border-radius: 1rem;
 padding: 1rem 1rem 0rem 1rem;
 }
+
+.defn p { margin-right: 0; margin-left: 0; }
+
 .defnline { background-color: #E6E6E6; color: #000; border-top: .05rem solid #c5c5cf; border-bottom: .05rem solid #c5c5cf; padding: .25rem 1rem .25rem 1rem; margin-left: -1rem; margin-right: -1rem; }
 
 .defn-or { font-style: italic; text-align: center; padding: .25rem; }
