--- a/docs/i7doc.css
+++ b/docs/i7doc.css
@@ -18,14 +18,18 @@ line-height: 1.5;
   width: 42rem;
 margin: auto;
 font-family: sans-serif;
-background-color: #F8F8FA; 
+background-color: #FAFAEF; 
 }
 p { margin-left: 1rem; margin-right: 1rem; }
 
-div.codeblock { background-color: #E6E6E6; color: #000;  font-family: "Go", sans-serif; margin-left: 0; margin-top: 1.5rem; margin-bottom: 1rem;  width: 100%; border: .05rem solid #c5c5cf; 
+div.codeblock { background-color: #dfe7ff; color: #000;  font-family: "Go", sans-serif; margin-left: 0; margin-top: 1.5rem; margin-bottom: 1rem;  width: 100%; border: .05rem solid #d5daff;
 padding-top: .33rem; padding-bottom: .5rem;
 border-radius: .33rem;
-}
+              }
+button.copycode {background-color: #dfe7ff; }
+.copycode { border: none; float: right; font-weight: bold; font-size: 1rem; padding: .1rem; }
+.copycode:hover { background-color: #c5caef; border-radius: .25rem; }
+
 .alpha-index-entry { margin-top: .25rem; }
 /* offset for td's padding */
 .codeblock > table::last-child { padding-bottom: .75rem; }
@@ -38,8 +42,8 @@ padding: 1rem 1rem 0rem 1rem;
 }
 
 .defn p { margin-right: 0; margin-left: 0; }
-
-.defnline { background-color: #E6E6E6; color: #000; border-top: .05rem solid #c5c5cf; border-bottom: .05rem solid #c5c5cf; padding: .25rem 1rem .25rem 1rem; margin-left: -1rem; margin-right: -1rem; }
+/* faeff1 eae0e8 */
+.defnline { background-color: #F9f9c8; border-top: .05rem solid #f7f7ba; border-bottom: .05rem solid #f7f7ba; padding: .25rem 1rem .25rem 1rem; margin-left: -1rem; margin-right: -1rem; }
 
 .defn-or { font-style: italic; text-align: center; padding: .25rem; }
 div.defn + div.defn { margin-top: 1rem; }
@@ -60,30 +64,32 @@ table + div.blankrows { margin-top: 0; }
 .prev-subname { float: inline-start; display: inline-block; }
 .next-subname { float: inline-end; display: inline-block; }
 
-footer { margin-left: 2rem; margin-right: 2rem; margin-top: .5rem; border-top: .1rem solid black; align: center; font-size: .9rem; }
+/* border-top: .1rem solid black;  */
+footer { align: center; font-size: .9rem; }
+.footing {border-top: .1rem solid black; }
+/*.rightmost { text-align: right; }
+.leftmost { text-align: left; }*/
 p.about { text-align: center; font-weight: bold; }
 p.search { margin-top: 2rem; }
-h1.title { 
-  font-size: 4.16rem;
-  line-height: 4.5rem;
+/*h1.title { 
+    font-size: 3.235rem;
+    line-height: 3rem;
   margin-top: 1.5rem;
-  margin-bottom: .5rem;
-}
+}*/
 summary { margin: .5rem 0 .5rem 0; }
 h1, .h1 {
-/*  font-size: 2.625rem;*/
- font-size: 3.13rem;
+    font-size: 2.5rem;
   line-height: 3rem;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
   text-align: center;
-  margin-bottom: .5rem;
+  margin-bottom: 0;
 }
 h2 {
 /*  font-size: 2.625rem;*/
-  font-size: 2.35rem;
+  font-size: 2.3rem;
   line-height: 3rem;
   margin-top: 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
  }
 h3, .toc-volume {
 /*  font-size: 1.625rem;*/
@@ -159,13 +165,14 @@ details.full-example > div {
     margin-right: 1rem;
     margin-left: 1rem;
 }*/
-
-a {
-text-decoration: none;
-border-bottom: dotted .14rem;
-}
-a.img { border-bottom: none; }
-
+a { text-decoration: none; }
+a:not(.nav-el) { border-bottom: dotted .14rem; }
+/*a.img { border-bottom: none; }*/
+header { margin-bottom: 1.5rem; }
+.superheading { text-align: center; margin-top: 1rem; }
+.heading { background-color: #dfe7ff; border: .05rem solid #d5daff; margin: auto; 
+           border-radius: 2rem; padding-bottom: 1.5rem;  padding-left: 2rem; padding-right: 2rem; display: inline-block; min-width: 60%; }
+.heading > h2 { text-align: center; }
 div.subheading { text-align:center; font-size: 1.73rem; padding: 0; }
 div.undersubheading { font-size: 1.44rem; padding: 0; }
 .example-desc { padding-left: 2.5rem; padding-right: 2.5rem; padding-bottom: 1rem; }
@@ -173,36 +180,26 @@ div.undersubheading { font-size: 1.44rem; padding: 0; }
 a.example-link { font-weight: bold; }
 div.example-linkback { text-align: right; }
 main { margin-bottom: 1rem; }
-.copycode { border: none; float: right; font-weight: bold; font-size: 1rem; padding: .1rem;  background-color: #E6E6E6; }
-.copycode:hover { background-color: #D0D0D0; border-radius: .25rem; }
 .example-name { font-weight: bold; }
 .see { font-style: italic; }
 div.indexentry span.indexgloss { color: green; font-style: italic; }
 div.indexentry span.indexsayphrase { color: blue; }
 div.indexentry a.indexlinkalt { color: gray;  font-style: italic; }
 div.indexentry span.indexphrasebracketed { color: purple; font-style: italic; }
-.doc-navbar { width: 100%; font-family: sans-serif; font-weight: bold; margin-top: 1.5rem; display: grid; grid-template-columns: 1fr 1fr; column-gap: 1.5rem; }
-.doc-navbar-left { grid-column: 1; }
-.doc-navbar-right { grid-column: 2; text-align: right; }
+.doc-navbar { font-family: sans-serif; font-weight: bold; display: flex; justify-content: space-between; gap: 1rem; margin-left: 0; margin-right: 0; margin-top: 1.5rem; margin-bottom: 1rem; } 
 .doc-navbar + .doc-navbar { margin-top: -.5rem; }
-/*.doc-navbar-left { float: left; padding-right: 1rem; width: 50%; }
-.doc-navbar-right { text-align: right; padding-left: 1rem;}*/
-.doc-navbar { margin-bottom: 1rem; }
-nav { padding-top: 1.5rem; }
-.sect-navbar { width: 100%; font-family: sans-serif; font-weight: bold; margin-top: 1.5rem; margin-bottom: 1.5rem; display: grid; grid-template-columns: 1fr 1fr 1fr; column-gap: 1.5rem; }
-.sect-navbar-left { grid-column: 1; }
-.sect-navbar-center { grid-column: 2; text-align: center; }
-.sect-navbar-right { grid-column: 3; text-align: right; }
 
-/*.ex { display: grid; grid-template-columns: */
+.doc-navbar-left, .doc-navbar-center, .doc-navbar-right { display: flex; flex: 1; }
+.doc-navbar-left { text-align: left; }
+.doc-navbar-center { text-align: center; }
+.doc-navbar-right { justify-content: flex-end; }
+.doc-navbar-right > * { text-align: right; }
 
-.doc-navbar-left::before { content: '← '; }
-.sect-navbar-center::before { content: '↑ '; }
-.doc-navbar-right::after { content: ' →'; }
-
-.sect-navbar-left::before { content: '← '; }
-.sect-navbar-center::before { content: '↑ '; }
-.sect-navbar-right::after { content: ' →'; }
+.nav-el { display: flex; border-bottom: .1rem solid rgba(0,0,0,0); }
+a.nav-el:hover { border-bottom: .1rem dotted; }
+.nav-arrow { flex-shrink: 0; }
+a.nav-about { border-bottom: .1rem solid rgba(0,0,0,0); }
+doc-navbar-text { vertical-align: top; }
 body.toc { width: 100%; }
 main.toc { margin-right: 5rem; margin-left: 5rem; }
 div.toc { display: grid; grid-template-columns: 1fr 1fr; }
@@ -218,9 +215,8 @@ div.rb { grid-column: 2; }
 .numeric-example { font-weight: bold; }
 
 .toc-er { width: 42rem; margin: auto; }
-nav { display: flex; font-size: 1.33rem; font-weight: bold; width: 42rem; margin: auto; margin-bottom: 1rem; }
-nav > * { flex: 1; }
-.nav-el { text-align: center; }
+nav { font-size: 1.33rem; font-weight: bold; width: 42rem; padding-top: 1.5rem; padding-bottom: 1rem; display: flex; justify-content: space-between; }
+
 .index-link { font-family: sans-serif; }
 .indexphrasebracketed, .indexifphrasebracketed, .indexsayphrasebracketed, .indexoutphrasebracketed, .indexassertbracketed, .indexrbbracketed, .indexpropbracketed, .indexpropcatbracketed, .indexadjbracketed, .indexrelbracketed, .indexrelcatbracketed, .indexglobbracketed, .indexactvarbracketed, .indexconstbracketed, .indexactionbracketed, .indexsourceargbracketed, .indextokenbracketed { font-family: sans-serif; font-style: italic; }
 
@@ -238,10 +234,9 @@ div.indexentry { font-family: sans-serif; padding-top: .3rem; }
 .indexletter { display: inline-block; padding: .25rem; }
 .indexcurrentletter { display: inline-block; border-top: .1rem solid black; border-right: .1rem solid black; border-left: .1rem solid black; padding: .25rem; }
 .borogove-link, .quixe-link { display: inline-block; }
-details.testme-output { margin-bottom: 1rem; border: .1rem solid  #F0F0FA; }
+details.testme-output { margin-bottom: 1rem; border: .1rem solid #FAFAEF; }
 details.testme-output > summary { padding-left: 1rem; }
 div.testme-output { padding-left: 2rem; padding-right: 1rem; }
 details.testme-output[open] { background-color: #E6E6E6; border: .1rem dotted black; border-radius: 1rem; padding-bottom: 1rem; }
 details.testme-output[open] > summary { padding-bottom: .5rem; border-bottom: .1rem solid black; }
-/*details.testme-output[open] { border: .1rem solid black; ; }*/
 .section-row + .section-row { margin-top: 1rem; }
