--- a/i7doc.css
+++ b/i7doc.css
@@ -102,8 +102,6 @@
     display: revert;
 }
 
-/* font-variation-settings: var(--mono), var(--casl), var(--wght), var(--slnt), var(--CRSV); font-variation-settings: var(--mono), var(--casl), var(--wght), var(--slnt), var(--CRSV);  "MONO" 1, "CASL" 0, "wght" 600, "slnt" 0, "CRSV" 0.5*/
-
 body, html {width: 100%; height:100%; }
 html {
   box-sizing: border-box;
@@ -114,7 +112,7 @@ html {
   font-family: var(--sans);
   font-size: 18px;
 }
-/* calc((16px + 2.5ex) / 2); */
+
 body {
   background-color: var(--bg-color);
   color: var(--fg-color); 
@@ -425,7 +423,7 @@ div.section-row { display: table-row; }
 div.section-chapter-num { display: table-cell; text-align: right; font-weight: var(--bold-weight); font-size: 1.2em; }
 div.section-section-num { display: table-cell; font-weight: var(--bold-weight); font-size: 1.2em; }
 div.section-name-holder { display: table-cell; }
-div.section-name { display: inline-flex; font-size: 1.2em; font-weight: var(--bold-weight); padding-left: 1rem; } /* rem, not em: different font sizes in play */
+div.section-name { font-size: 1.2em; font-weight: var(--bold-weight); padding-left: 1rem; } /* rem, not em: different font sizes in play */
 span.chapter-name { padding-left: 1rem; } /* same as div.section-name */
 
 div.example-block { display: table; }
@@ -433,10 +431,12 @@ div.example-row { display: table-row; }
 div.example-number-cell { display: table-cell; text-align: right; width: 3em; }
 div.example-name-cell { display: table-cell; padding-left: .75em; }
 .section-example-name { font-weight: normal; }
-
+.section-example-name::after { content: ' ❧ '; font-family: var(--sym); }
+.section-example-name:last-child::after { content: ''; }
 div.example-short { display: flex; }
 
-.thematic-examples { display: flex; flex-flow: row; }
+.thematic-examples { padding-left: 1rem; }
+
 
 div.example-short-name { margin-left: .5em; }
 span.example-short-name { font-weight: var(--bold-weight); }
