--- a/docs/i7doc.css
+++ b/docs/i7doc.css
@@ -300,7 +300,7 @@ td { border: var(--td-border-width) solid; padding: .25em; vertical-align: top; 
 img.bordered { display: block; margin-left: auto; margin-right: auto; margin-top: 2em; margin-bottom: 2em; }
 .example-short, p { margin-left: 1em; margin-right: 1em; }
 
-div.codeblock { margin-left: 0; margin-top: 1.5em; margin-bottom: 1em;  width: 100%; padding-top: .33em; padding-bottom: .5em; border-radius: .33em; background-color: var(--codeblock-bg-color); line-height: 1.5; }
+blockquote,div.codeblock { margin-left: 0; margin-top: 1.5em; margin-bottom: 1em;  width: 100%; padding-top: .33em; padding-bottom: .5em; border-radius: .33em; background-color: var(--codeblock-bg-color); line-height: 1.5; }
 
 .copycode { float: right; font-weight: var(--bold-weight); font-size: 1em; border-radius: .25em; border: var(--codeblock-border-width) solid transparent;  font-family: var(--sym); }
 
