--- a/docs/i7prog/i7prog.css
+++ b/docs/i7prog/i7prog.css
@@ -1,9 +1,3 @@
-/*ul.bullet {
-    list-style-type: disc;
-    list-style-position: inside;
-}
-*/
-
 ol.num { list-style-type: revert;
          list-style-position: inside;
          margin-inline-start: 1rem;
@@ -19,7 +13,13 @@ ul {
     list-style-position: inside;
     margin-left: 3em;
     text-indent: -1.5em;
+}
+
+ul.action-rulebooks { list-style-type: disc; }
+
+ul.bullet {
     list-style-type: disc;
+    text-indent: 0;
 }
 
 li.npc {  list-style-type: "🎭"; }
