--- a/docs/i7prog/i7prog.css
+++ b/docs/i7prog/i7prog.css
@@ -15,6 +15,8 @@ ul {
     text-indent: -1.5em;
 }
 
+ul.contents { margin-left: 0; text-indent: 0; }
+
 ul.action-rulebooks { list-style-type: disc; }
 
 ul.bullet {
