--- a/docs/i7doc.css
+++ b/docs/i7doc.css
@@ -141,7 +141,7 @@ h6 { font-weight: var(--bold-weight) }*/
 article { margin: auto; }
 
 b, strong { font-weight: var(--bold-weight); }
-i. em { font-variant: italic; }
+i, em { font-style: italic; }
 img { box-sizing: content-box; }
 
 a { text-decoration: none; border-bottom: dotted var(--link-underline-height); }
