--- a/docs/i7handbook/i7handbook.css
+++ b/docs/i7handbook/i7handbook.css
@@ -1,2 +1,62 @@
-/*
- */
+  .image-frame {
+display: flex;
+    align-items: center;
+    justify-content: center; }
+  heading, .subtitle { text-align: center; }
+  .subtitle { line-height: 1.2; margin-top: 1rem; }
+  p + .image-frame, .image-frame + p { margin-top: 1rem; }
+  img {margin: auto; }
+
+  .addendum { border: .1rem solid currentColor; border-radius: 1.5rem; }
+  ul {
+    list-style-position: inside;
+    margin-left: 3em;
+    text-indent: -1.5em;
+    list-style-type: disc;
+    text-indent: 0;
+}
+.codeblock + .codeblock { margin-top: 1rem; }
+ol.num { list-style: decimal inside; }
+div { border-radius: 1.5rem; }
+.caps { text-transform: uppercase }
+
+.command { margin-left: 1rem; margin-right: 1rem; font-family: monospace; font-size: .9375rem; }
+
+p + div, div + p { margin-top: 1rem; }
+
+/* p + .command { margin-top: 1rem; } */
+
+.prompt::after { content: ' ' }
+
+.game-output { background-color: #88460b; padding-top: .75rem; padding-bottom: .75rem; }
+.sidebar { background-color: #232B32; padding-bottom: 1rem; margin-bottom: 1rem; }
+/* p + .game-output, .game-output + p { margin-top: 1rem; } */
+.game-output > p { margin-top: 0; }
+.game-output > p:last-child { margin-bottom: 0; }
+.game-output > p { line-height: 1.33; }
+/*.game-output p + p { margin-top: 0; }*/
+
+.sidebar > h4 { margin-left: 1em; margin-right: 1em; }
+ol, ul, p { margin-left: 1em; margin-right: 1em; }
+ol, ul { margin-left: 2.5em; text-indent: -1.5em; }
+ol > li::before { content: '\2002'; }
+sidebar > p, blockquote > p { margin-left: 0em; margin-right: 0em; padding-left: 1em; padding-right: 1em; }
+sidebar > p, blockquote > p:first-child { margin-top: 0; }
+blockquote > p:last-child { margin-bottom: 0; }
+sidebar > p:last-child { margin-bottom: 0; }
+
+p:last-child: { margin-bottom: revert; }
+
+p + ol, ol + p { margin-top: 1em; }
+p + ul, ul + p { margin-top: 1em; }
+
+ol > li + li { margin-top: 1em; }
+
+td > p { width: revert; }
+
+h2 { margin-top: 1.5rem; margin-bottom: 1.5rem; }
+
+h3 { margin-top: 1rem; }
+h3 { margin-bottom: 1rem; }
+
+
