--- a/docs/i7doc.css
+++ b/docs/i7doc.css
@@ -92,7 +92,6 @@
         --indexbar-bg-color: #232B32;
         --index-bar-border-width: .08rem;
         --testme-border-width: .05rem;
-        ---index-bar-bg-color: #232B32;
     }
 }
 }
@@ -100,6 +99,7 @@
 *:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
     all: unset;
     display: revert;
+    counter-reset: revert;
 }
 
 body, html {width: 100%; height:100%; }
@@ -174,11 +174,6 @@ a {
     cursor: revert;
 }
 
-/* Remove list styles (bullets/numbers) */
-ol, ul, menu {
-    list-style: none;
-}
-
 /* For images to not be able to exceed their container */
 img {
     max-width: 100%;
@@ -217,7 +212,7 @@ p {
 }
 
 :where(nav) :where(ol, ul) {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 :where(nav li)::before {
