--- a/docs/i7handbook/i7handbook.css
+++ b/docs/i7handbook/i7handbook.css
@@ -27,16 +27,19 @@ div { border-radius: 1rem; }
 
 p + div, div + p { margin-top: 1rem; }
 
+* + table { margin-top: 1rem; }
+table + * { margin-top: 1rem; }
+
 /* p + .command { margin-top: 1rem; } */
 
-
+tr.action-stage > td { padding-top: .5rem; padding-bottom: .5rem; font-size: 1.25rem; }
 
 .prompt { padding-right: .25rem; }
 
 .game-output { background-color: var(--defn-line-bg-color); padding-top: .75rem; padding-bottom: .75rem; }
-.sidebar { background-color: var(--indexbar-bg-color); margin-bottom: 1rem; padding-top: .5rem; padding-bottom: 1rem; margin-top: 1rem; }
+.sidebar { background-color: var(--indexbar-bg-color); margin-bottom: 2rem; padding-top: .5rem; padding-bottom: 1rem; margin-top: 2rem; }
 
-.sidebar + .sidebar { margin-top: 1.5rem; }
+/*.sidebar + .sidebar { margin-top: 0; }*/
 
 /* p + .game-output, .game-output + p { margin-top: 1rem; } */
 .game-output > p { margin-top: 0; }
@@ -44,16 +47,20 @@ p + div, div + p { margin-top: 1rem; }
 .game-output > p { line-height: 1.33; }
 /*.game-output p + p { margin-top: 0; }*/
 
+thead th { font-weight: bold; }
+
 .sidebar > h4 { margin-left: 1em; margin-right: 1em; margin-top: .5rem; }
-ol, ul, p { margin-left: 1em; margin-right: 1em; }
+p { margin-left: 1em; margin-right: 1em; }
 ol, ul { margin-left: 2.5em; text-indent: -1.5em; }
 ol > li::before { content: '\2002'; } 
 sidebar > p, blockquote > p { margin-left: 0em; margin-right: 0em; padding-left: 1em; padding-right: 1em; }
 
 .disclaimer { margin-top: 1rem; }
 
-.footnote + sidebar, p + sidebar { margin-top: 1rem; }
+.footnote + sidebar, p + sidebar { margin-top: 1.5rem; }
 sidebar + p { margin-top: 1rem; }
+
+/*.sidebar { margin-bottom: 1.5rem; }*/
 
 /*body + p:first-child { margin-top: 1.5em; }
 
@@ -77,3 +84,6 @@ h3 { margin-bottom: 1rem; }
 
 header > h1, header > h2 { text-align: center; }
 header > h1 + h2 { margin-top: 0; }
+
+body > footer { margin-top: 2rem; margin-bottom: 3rem; }
+body > header { margin-top: 1rem; margin-bottom: 2rem; }
