--- a/docs/i7handbook/i7handbook.css
+++ b/docs/i7handbook/i7handbook.css
@@ -10,7 +10,7 @@ display: flex;
 
   .addendum { border: .1rem solid currentColor; border-radius: 1rem;  }
   .add-header { padding-left: 1rem; border-bottom: .1rem solid currentColor; border-radius: 1rem 1rem 0 0; background-color: var(--testme-bg-color); font-weight: bold; padding-top: .5rem; padding-bottom: .5rem; }
-  .add-body { margin-top: 1rem; margin-bottom: 1rem; padding-left: 1rem; border-radius: 0 0 1rem 1rem; }
+  .add-body { margin-top: 1rem; margin-bottom: 1rem; border-radius: 0 0 1rem 1rem; }
   ul {
     list-style-position: inside;
     margin-left: 3em;
@@ -22,7 +22,7 @@ display: flex;
 ol.num { list-style: decimal inside; }
 div { border-radius: 1rem; }
 .caps { text-transform: uppercase }
-
+.codeline { padding-right: .25rem; }
 .command { margin-left: 1rem; margin-right: 1rem; font-family: monospace; font-size: .9375rem; }
 
 p + div, div + p { margin-top: 1rem; }
@@ -80,7 +80,6 @@ h2 { margin-top: 1.5rem; margin-bottom: 1.5rem; }
 
 h3 { margin-top: 1rem; }
 h3 { margin-bottom: 1rem; }
-
 
 header > h1, header > h2 { text-align: center; }
 header > h1 + h2 { margin-top: 0; }
