--- a/docs/i7prog/i7prog.css
+++ b/docs/i7prog/i7prog.css
@@ -1,3 +1,6 @@
+p + ul { margin-top: 1rem; }
+ul + p { margin-top: 1rem; }
+
 ol.num { list-style-type: revert;
          list-style-position: inside;
     margin-left: 1em;
