--- a/docs/i7prog/i7prog.css
+++ b/docs/i7prog/i7prog.css
@@ -1,6 +1,8 @@
 p + ul { margin-top: 1rem; }
 ul + p { margin-top: 1rem; }
 
+.title + .subtitle { margin-top: .5rem; }
+
 ol.num { list-style-type: revert;
          list-style-position: inside;
     margin-left: 1em;
